Fixed generate button size on mobile

--- a/style/machine.css
+++ b/style/machine.css
@@ -76,13 +76,12 @@ input.PixelatedInput[type=text]:focus {
     background: url("../assets/images/button.webp") no-repeat;
     background-origin: content-box;
     background-size: 100% 100%;
-    width: 76%;
+    width: min(82%, 94px);
     height: 72%;
-    right: 12.7%;
-    bottom: 14.5%;
     transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
     border: none;
-
+    margin-top: 13%;
+    margin-left: 9.5%;
 }
 
 .generateButton:hover {
